# Termsequel

./: .editorconfig  .gitignore  CMakeLists.txt  Changelog.md  LICENSE  Makefile  README.md  compile_flags.txt  termsequel.cpp  termsequel.hpp.in
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
.github/workflows/: c-cpp.yml  cmake.yml  pre-release.yml  pull-request.yml  release.yml
include/: command-line.hpp  compiler.hpp  lexeme.hpp  lexical.hpp  syntax.hpp  system.hpp  token.hpp
src/: command-line.cpp  compiler.cpp  lexeme.cpp  lexical.cpp  syntax.cpp  system.cpp  token.cpp
